2007-02-01  Ankit Jain  <jankit@novell.com>

	* MSBuildFileFormat.cs (ReadItemGroups): Check for invalid paths.
	(GetValidPath): New.

2007-01-27  Ankit Jain  <jankit@novell.com>

	* MSBuildFileFormat.cs (ReferenceToXmlElement): Use System.Reflection to
	get assembly name instead of cecil.
	* Makefile.am: Remove reference to Mono.Cecil .

2007-01-24  Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs: Remove use of StreamReader.EndOfStream to be
	compilable with mono 1.1.13.8 

2007-01-20  Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs (HandleCombineEntryAdded):
	(SetHandlers):
	(ConvertToMSBuild):
	(UpdateProjectReferences): Move to ..
	* MSBuildSolution.cs: .. here.
	* MSBuildFileFormat.cs (ReadConfig): Fix a warning.

2007-01-19  Ankit Jain  <jankit@novell.com>

	* prj2make-sharp-lib.addin.xml: Add dependency on VBBinding.
	Fix bug #80555.

2007-01-18  Marek Sieradzki  <marek.sieradzki@gmail.com>

	* MsPrjHelper.cs: Remove warning.

2007-01-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MSBuildSolution.cs, SlnFileFormat.cs: Track api changes.

2006-12-28  Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs (LoadSolution): Set Version to "0.1". Temporary hack.
	* MSBuildFileFormat.cs (LoadProject): Likewise.

2006-12-27  Ankit Jain  <jankit@novell.com>

	* SlnData.cs (SectionExtras): New.
	* SlnFileFormat.cs (LoadProjectConfigurationMappings): Preserve lines
	that we cannot parse or correspond to projects that could not load.
	(WriteFileInternal): Write lines that we could not parse when reading.

2006-12-26  Ankit Jain  <jankit@novell.com>

	* MSBuildSolution.cs (HandleAddEntry): Fix order of arguments to AskQuestion.

2006-12-26  Ankit Jain  <jankit@novell.com>

	* SlnFileFormat.cs (LoadProjectConfigurationMappings): Update to
	changes.
	(FindCombineConfigurationEntry): Replace with ...
	(GetConfigEntryForProject): ... this. Create the entries if not found.
	(GetConfigEntry): New.

2006-12-22  Ankit Jain  <jankit@novell.com>

	* MSBuildSolution.cs: