@@ -1,3 +1,9 @@
+2007-02-07  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MsPrjHelper.cs: Use a TextFileReader to open the VS file, since it
+	  can auto-detect the file encoding.
+	* prj2make-sharp-lib.mdp: Minor update.
+
 2007-02-01  Ankit Jain  <jankit@novell.com>
 
 	* MSBuildFileFormat.cs (ReadItemGroups): Check for invalid paths.
